<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_field_note"
            android:title="@string/field_note"
            android:checkable="true"
            android:checked="true"/>

        <item
            android:id="@+id/menu_tape_and_compass"
            android:title="@string/tape_and_compass"
            android:checkable="true"/>

        <item
            android:id="@+id/menu_contour"
            android:title="@string/contour"
            android:checkable="true"/>

        <item
            android:id="@+id/menu_stratigraphy"
            android:title="@string/stratigraphy"
            android:checkable="true"/>
    </group>

</menu>