<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/txt_date"
            style="@style/SubtitleStyle"
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <TextView
            android:id="@+id/txt_time"
            style="@style/SubtitleStyle"
            android:text="@string/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gps_location" />

        <TextView
            android:id="@+id/txt_gps"
            style="@style/SubtitleStyle"
            android:text="@string/gps_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_no" />

        <TextView
            android:id="@+id/txt_map"
            style="@style/SubtitleStyle"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/map_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rock_type" />

        <TextView
            android:id="@+id/txt_rock_type"
            style="@style/SubtitleStyle"
            android:text="@string/rock_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rock_unit" />

        <TextView
            android:id="@+id/txt_rock_unit"
            style="@style/SubtitleStyle"
            android:paddingBottom="16dp"
            android:text="@string/rock_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_outcrop"
                    android:scaleType="centerCrop"
                    android:layout_width="70dp"
                    android:layout_height="70dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_outcrop"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_outcrop_facing"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="@dimen/padding_normal"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lithology" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texture" />

        <TextView
            android:id="@+id/txt_texture"
            style="@style/SubtitleStyle"
            android:text="@string/texture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weathering_color" />

        <TextView
            android:id="@+id/txt_weathering_color"
            style="@style/SubtitleStyle"
            android:text="@string/weathering_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fresh_color" />

        <TextView
            android:id="@+id/txt_fresh_color"
            style="@style/SubtitleStyle"
            android:text="@string/fresh_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grain_size" />

        <TextView
            android:id="@+id/txt_grain_size"
            style="@style/SubtitleStyle"
            android:text="@string/grain_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mineral_composition" />

        <TextView
            android:id="@+id/txt_mineral_composition"
            style="@style/SubtitleStyle"
            android:text="@string/mineral_composition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note" />

        <TextView
            android:id="@+id/txt_lithology_note"
            style="@style/SubtitleStyle"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_sample"
                    android:scaleType="centerCrop"
                    android:layout_width="70dp"
                    android:layout_height="70dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_sample"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_sample_facing"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="@dimen/padding_normal"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/structures" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bedding_foliation" />

        <TextView
            android:id="@+id/txt_bedding_foliation"
            style="@style/SubtitleStyle"
            android:text="@string/bedding_foliation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/j1" />

        <TextView
            android:id="@+id/txt_j1"
            style="@style/SubtitleStyle"
            android:text="@string/j1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/j2" />

        <TextView
            android:id="@+id/txt_j2"
            style="@style/SubtitleStyle"
            android:text="@string/j2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/j3" />

        <TextView
            android:id="@+id/txt_j3"
            style="@style/SubtitleStyle"
            android:text="@string/j3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fold_axis" />

        <TextView
            android:id="@+id/txt_fold_axis"
            style="@style/SubtitleStyle"
            android:text="@string/fold_axis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lineation" />

        <TextView
            android:id="@+id/txt_lineation"
            style="@style/SubtitleStyle"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/lineation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note" />

        <TextView
            android:id="@+id/txt_note"
            style="@style/SubtitleStyle"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>